--- a/public/moises.html
+++ b/public/moises.html
@@ -3,103 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relatórios - Moisés</title>
+    <title>Página de Moisés - Relatórios</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
         }
-        #calendar {
-            margin-bottom: 20px;
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        #reportContent {
             margin-top: 20px;
         }
-        .clickable {
-            color: blue;
-            text-decoration: underline;
-            cursor: pointer;
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
         }
     </style>
 </head>
 <body>
-    <h1>Relatórios de Entregas - Moisés</h1>
-    <input type="date" id="calendar">
-    <div id="reportContent">
-        <!-- Conteúdo do relatório será carregado aqui -->
+    <div class="container">
+        <h1>Relatórios de Moisés</h1>
+        <div id="filtroData">
+            <label for="dataFiltro">Filtrar por data:</label>
+            <input type="date" id="dataFiltro">
+            <button onclick="filtrarPorData()">Filtrar</button>
+        </div>
+        <table id="tabelaRelatorios">
+            <thead>
+                <tr>
+                    <th>Data</th>
+                    <th>Quantidade de Entregas</th>
+                    <th>Entregas na Mesma Casa</th>
+                    <th>Turnos</th>
+                    <th>Total Recebido</th>
+                </tr>
+            </thead>
+            <tbody id="corpoTabela">
+                <!-- Os relatórios serão inseridos aqui -->
+            </tbody>
+        </table>
     </div>
 
-    <script>
-        document.getElementById('calendar').addEventListener('change', function() {
-            const selectedDate = this.value;
-            if (selectedDate) {
-                fetch(`https://cabana-8d55e.uc.r.appspot.com/get_report?motoboy=moises&date=${selectedDate}`)
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error(`HTTP error! status: ${response.status}`);
-                        }
-                        return response.json();
-                    })
-                    .then(data => {
-                        displayReport(data);
-                    })
-                    .catch(error => {
-                        console.error('Erro ao carregar o relatório:', error);
-                        document.getElementById('reportContent').innerHTML = '<p>Erro ao carregar o relatório. Tente novamente mais tarde.</p>';
-                    });
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js';
+        import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js';
+        import { getDatabase, ref, onValue, query, orderByChild, equalTo } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js';
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const database = getDatabase(app);
+
+        function carregarRelatorios(userId) {
+            const relatoriosRef = ref(database, 'relatorios');
+            const userRelatoriosQuery = query(relatoriosRef, orderByChild('userId'), equalTo(userId));
+
+            onValue(userRelatoriosQuery, (snapshot) => {
+                const corpoTabela = document.getElementById('corpoTabela');
+                corpoTabela.innerHTML = '';
+
+                snapshot.forEach((childSnapshot) => {
+                    const relatorio = childSnapshot.val();
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td>${relatorio.data}</td>
+                        <td>${relatorio.qtdEntregas}</td>
+                        <td>${relatorio.entregasMesmaCasa}</td>
+                        <td>${relatorio.turnos}</td>
+                        <td>${relatorio.totalReceber}</td>
+                    `;
+                    corpoTabela.appendChild(row);
+                });
+            });
+        }
+
+        onAuthStateChanged(auth, (user) => {
+            if (user && user.email === 'moises110723@gmail.com') {
+                carregarRelatorios(user.uid);
+            } else {
+                window.location.href = 'index.html';
             }
         });
 
-        function displayReport(data) {
-            const reportContent = document.getElementById('reportContent');
-            reportContent.innerHTML = '';
+        window.filtrarPorData = function() {
+            const dataFiltro = document.getElementById('dataFiltro').value;
+            const rows = document.querySelectorAll('#corpoTabela tr');
 
-            if (data.length === 0) {
-                reportContent.innerHTML = '<p>Nenhum relatório encontrado para esta data.</p>';
-                return;
-            }
-
-            const table = document.createElement('table');
-            const headerRow = document.createElement('tr');
-            const desiredFields = ['N Pedido', 'Endereço', 'Data e hora', 'Distância em raio (km)', 'Nome do cliente', 'Forma de pagamento', 'Detalhes do pedido'];
-            
-            desiredFields.forEach(header => {
-                const th = document.createElement('th');
-                th.textContent = header;
-                headerRow.appendChild(th);
+            rows.forEach(row => {
+                const dataRelatorio = row.cells[0].textContent;
+                if (dataRelatorio === dataFiltro) {
+                    row.style.display = '';
+                } else {
+                    row.style.display = 'none';
+                }
             });
-            table.appendChild(headerRow);
-
-            data.forEach(record => {
-                const row = document.createElement('tr');
-                desiredFields.forEach(field => {
-                    const td = document.createElement('td');
-                    if (field === 'Endereço') {
-                        td.textContent = record[field] || 'N/A';
-                        td.classList.add('clickable');
-                        td.addEventListener('click', () => {
-                            window.location.href = `mapa.html?address=${encodeURIComponent(record[field])}`;
-                        });
-                    } else {
-                        td.textContent = record[field] !== undefined ? record[field] : 'N/A';
-                    }
-                    row.appendChild(td);
-                });
-                table.appendChild(row);
-            });
-
-            reportContent.appendChild(table);
         }
     </script>
 </body>
