--- a/public/ganhos.html
+++ b/public/ganhos.html
@@ -5,8 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Ganhos - Cabana Açaí</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Estilos para o menu */
+        .menu-icon {
+            cursor: pointer;
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 1000;
+        }
+        .menu-icon div {
+            width: 35px;
+            height: 5px;
+            background-color: #333;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+        .sidebar {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 999;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
+        .sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+        .sidebar a:hover {
+            color: #f1f1f1;
+        }
+        .sidebar .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+    </style>
 </head>
 <body>
+    <!-- Ícone do menu -->
+    <div class="menu-icon" onclick="toggleMenu()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <!-- Sidebar -->
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">&times;</a>
+        <a href="ganhos.html">Informar Ganhos</a>
+        <a href="#" onclick="redirecionarParaGanhos()">Ver meus ganhos</a>
+        <a href="waze.html">Ver Trânsito</a>
+    </div>
+
     <div class="container">
         <h1>Calculadora de Ganhos</h1>
         <form id="formGanhos">
@@ -164,6 +226,46 @@
         ['qtdEntregas', 'entregasMesmaCasa', 'turnos'].forEach(id => {
             document.getElementById(id).addEventListener('change', calcularTotal);
         });
+
+        // Funções para o menu
+        window.toggleMenu = function() {
+            var sidebar = document.getElementById("mySidebar");
+            if (sidebar.style.width === "250px") {
+                sidebar.style.width = "0";
+            } else {
+                sidebar.style.width = "250px";
+            }
+        }
+
+        window.redirecionarParaGanhos = function() {
+            const user = auth.currentUser;
+            if (user) {
+                switch(user.email) {
+                    case 'fellipeirineu90@gmail.com':
+                        window.location.href = 'fellipematheus.html';
+                        break;
+                    case 'moises110723@gmail.com':
+                        window.location.href = 'moises.html';
+                        break;
+                    case 'felipeaugusto02001@gmail.com':
+                        window.location.href = 'felipeaugusto.html';
+                        break;
+                    case 'giovanni.silva18@gmail.com':
+                        window.location.href = 'giovanni.html';
+                        break;
+                    case 'boazd3@gmail.com':
+                        window.location.href = 'boaz.html';
+                        break;
+                    case 'musculacaoatual@gmail.com':
+                        window.location.href = 'jackson.html';
+                        break;
+                    default:
+                        alert('Página não encontrada para este usuário');
+                }
+            } else {
+                window.location.href = 'index.html';
+            }
+        }
     </script>
 </body>
 </html>
