--- a/public/ganhos.html
+++ b/public/ganhos.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="container">
-        <h1><center>Seus Ganhos></center></h1>
+        <h1><center>Seus Ganhos</center></h1>
         <form id="formGanhos">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" readonly>
