--- a/public/boaz.html
+++ b/public/boaz.html
@@ -5,6 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatórios de Boaz - Cabana Açaí</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .footer-links {
+            background-color: #f8f8f8;
+            padding: 30px 0;
+            margin-top: 50px;
+            text-align: center;
+        }
+        .footer-links h3 {
+            color: #5d4037;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .link-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .link-item {
+            background-color: #5d4037;
+            border-radius: 10px;
+            padding: 15px 25px;
+            color: #ffffff;
+            text-decoration: none;
+            font-size: 18px;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        .link-item:hover {
+            background-color: #8d6e63;
+            transform: translateY(-5px);
+            box-shadow: 0 6px 8px rgba(0,0,0,0.15);
+        }
+        .link-item i {
+            margin-right: 10px;
+        }
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+        .animated {
+            animation: pulse 2s infinite;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -18,6 +70,24 @@
         </div>
         <div id="relatorios"></div>
     </div>
+
+    <footer class="footer-links">
+        <h3>Explore mais opções</h3>
+        <div class="link-container">
+            <a href="ganhos.html" class="link-item">
+                <i class="fas fa-coins"></i>
+                Informar Ganhos
+            </a>
+            <a href="#" onclick="redirecionarParaGanhos()" class="link-item animated">
+                <i class="fas fa-chart-line"></i>
+                Ver meus ganhos
+            </a>
+            <a href="waze.html" class="link-item">
+                <i class="fas fa-map-marked-alt"></i>
+                Ver Trânsito
+            </a>
+        </div>
+    </footer>
 
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js';
@@ -88,6 +158,15 @@
         });
 
         document.getElementById('btnFiltrar').addEventListener('click', filtrarRelatorios);
+    </script>
+
+    <script>
+        function redirecionarParaGanhos() {
+            // Implemente a lógica de redirecionamento aqui
+            console.log("Redirecionando para a página de ganhos...");
+            // Por exemplo:
+            // window.location.href = 'ver_ganhos.html';
+        }
     </script>
 </body>
 </html>
