--- a/public/menu.html
+++ b/public/menu.html
@@ -144,7 +144,7 @@
                         pagina = 'felipeaugusto.html';
                         break;
                     case 'musculacaoatual@gmail.com':
-                        pagina = 'moises.html';
+                        pagina = 'jackson.html';
                         break;
                     default:
                         pagina = 'entregas.html'; // Página padrão caso o email não corresponda a nenhum dos listados
