--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Criar Pedido</title>
+  <title>Create Order</title>
 </head>
 <body>
-  <h1>Criar Pedido</h1>
+  <h1>Create Order</h1>
   <form id="orderForm">
     <input type="text" id="customerName" placeholder="Customer Name" required />
     <input type="text" id="orderDetails" placeholder="Order Details" required />
-    <button type="submit">Enviar Pedidos</button>
+    <button type="submit">Submit Order</button>
   </form>
 
   <script>
@@ -20,8 +20,8 @@
       const customerName = document.getElementById('customerName').value;
       const orderDetails = document.getElementById('orderDetails').value;
 
-      fetch('https://us-central1-cabana-8d55e.cloudfunctions.net/createOrder
-', {
+      // Enviar o pedido para a função do Firebase
+      fetch('https://us-central1-cabana-8d55e.cloudfunctions.net/createOrder', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
