--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -18,7 +18,10 @@
       const endDate = new Date().toISOString();
       const startDate = new Date(new Date().getTime() - (24 * 60 * 60 * 1000)).toISOString();
 
-      fetch(`${foodyApiUrl}?startDate=${startDate}&endDate=${endDate}`, {
+      // Usar um proxy para contornar o problema de CORS
+      const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
+
+      fetch(`${proxyUrl}${foodyApiUrl}?startDate=${startDate}&endDate=${endDate}`, {
         method: 'GET',
         headers: {
           'Authorization': `Bearer ${foodyApiToken}`,
