--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -31,7 +31,12 @@
           'Content-Type': 'application/json'
         }
       })
-      .then(response => response.json())
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        return response.json();
+      })
       .then(data => {
         console.log('Received data:', data);
         const orderResults = document.getElementById('orderResults');
