--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -12,7 +12,7 @@
   <script>
     // Função para formatar a data no formato yyyy-MM-dd'T'HH:mm:ssXXX
     const formatDate = (date) => {
-      return date.toISOString().split('.')[0];
+      return date.toISOString().split('.')[0] + 'Z';
     };
 
     const fetchOrders = () => {
