--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -10,9 +10,9 @@
   <div id="orderResults"></div>
 
   <script>
-    // Função para formatar a data no formato yyyy-MM-dd'T'HH:mm:ssXXX
+    // Função para formatar a data no formato yyyy-MM-dd'T'HH:mm:ssX
     const formatDate = (date) => {
-      return date.toISOString().split('.')[0] + 'Z';
+      return date.toISOString().replace(/\.\d{3}Z$/, '');
     };
 
     const fetchOrders = () => {
