--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -10,6 +10,7 @@
         h1 { color: #333; }
         #orderResults { margin-top: 20px; }
         .order { background-color: #f0f0f0; border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; }
+        .error { color: red; }
     </style>
 </head>
 <body>
@@ -31,6 +32,8 @@
             const endDate = formatDate(now);
             const url = `${proxyUrl}${encodeURIComponent(foodyApiUrl)}?startDate=${startDate}&endDate=${endDate}`;
 
+            console.log('Requesting URL:', url);
+
             try {
                 const response = await axios.get(url, {
                     headers: {
@@ -38,10 +41,22 @@
                         'Content-Type': 'application/json;charset=UTF-8'
                     }
                 });
+                console.log('Response:', response.data);
                 displayOrders(response.data);
             } catch (error) {
                 console.error('Erro ao buscar pedidos:', error);
-                document.getElementById('orderResults').innerHTML = '<p>Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
+                let errorMessage = 'Erro ao carregar pedidos. ';
+                if (error.response) {
+                    errorMessage += `Status: ${error.response.status}. `;
+                    if (error.response.data) {
+                        errorMessage += `Mensagem: ${JSON.stringify(error.response.data)}`;
+                    }
+                } else if (error.request) {
+                    errorMessage += 'Sem resposta do servidor.';
+                } else {
+                    errorMessage += error.message;
+                }
+                document.getElementById('orderResults').innerHTML = `<p class="error">${errorMessage}</p>`;
             }
         }
 
@@ -49,7 +64,7 @@
             const orderResults = document.getElementById('orderResults');
             orderResults.innerHTML = '';
 
-            if (orders.length === 0) {
+            if (!Array.isArray(orders) || orders.length === 0) {
                 orderResults.innerHTML = '<p>Nenhum pedido encontrado para hoje.</p>';
                 return;
             }
