--- a/public/chat.html
+++ b/public/chat.html
@@ -12,7 +12,7 @@
             background-color: #f0f0f0;
         }
         .chat-container {
-            max-width: 800px;
+            max-width: 600px;
             margin: 20px auto;
             background-color: #fff;
             border-radius: 8px;
@@ -22,34 +22,37 @@
         .chat-header {
             background-color: #4CAF50;
             color: white;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
-            font-size: 24px;
+            font-size: 18px;
         }
         .chat-messages {
             height: 400px;
             overflow-y: auto;
-            padding: 20px;
+            padding: 15px;
         }
         .message {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             padding: 10px;
             border-radius: 5px;
-            max-width: 80%;
+            max-width: 70%;
         }
-        .message.sent {
-            background-color: #e1ffc7;
-            margin-left: auto;
+        .received {
+            background-color: #f1f0f0;
+            float: left;
+            clear: both;
         }
-        .message.received {
-            background-color: #f0f0f0;
+        .sent {
+            background-color: #dcf8c6;
+            float: right;
+            clear: both;
         }
         .chat-input {
             display: flex;
-            padding: 20px;
-            border-top: 1px solid #e0e0e0;
+            padding: 15px;
+            border-top: 1px solid #ddd;
         }
-        #message-input {
+        #message-input, #name-input {
             flex-grow: 1;
             padding: 10px;
             border: 1px solid #ddd;
@@ -64,6 +67,11 @@
             margin-left: 10px;
             cursor: pointer;
         }
+        #name-input {
+            width: calc(100% - 30px);
+            margin: 15px;
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body>
@@ -71,6 +79,7 @@
         <div class="chat-header">
             Chat Online - Motoboys
         </div>
+        <input type="text" id="name-input" placeholder="Digite seu nome">
         <div class="chat-messages" id="chat-messages">
             <!-- As mensagens serão inseridas aqui dinamicamente -->
         </div>
@@ -83,34 +92,28 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
-        // Configuração do Firebase (substitua com suas próprias credenciais)
+        // Configuração do Firebase
         const firebaseConfig = {
-  apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-  authDomain: "cabana-8d55e.firebaseapp.com",
-  databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-  projectId: "cabana-8d55e",
-  storageBucket: "cabana-8d55e.appspot.com",
-  messagingSenderId: "706144237954",
-  appId: "1:706144237954:web:345c10370972486afc779b",
-  measurementId: "G-96Y337GYT8"
+            // Insira sua configuração do Firebase aqui
         };
-
-        // Inicializar Firebase
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
         const chatMessages = document.getElementById('chat-messages');
         const messageInput = document.getElementById('message-input');
         const sendButton = document.getElementById('send-button');
+        const nameInput = document.getElementById('name-input');
 
         // Função para enviar mensagem
         function sendMessage() {
             const message = messageInput.value.trim();
+            const name = nameInput.value.trim() || 'Anônimo';
             if (message) {
                 database.ref('messages').push({
                     text: message,
                     timestamp: Date.now(),
-                    sender: 'motoboy'
+                    sender: 'motoboy',
+                    name: name
                 });
                 messageInput.value = '';
             }
@@ -119,9 +122,9 @@
         // Evento de clique no botão enviar
         sendButton.addEventListener('click', sendMessage);
 
-        // Evento de tecla pressionada no campo de input
-        messageInput.addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
+        // Evento de pressionar Enter no campo de mensagem
+        messageInput.addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
                 sendMessage();
             }
         });
