--- a/public/chatonline.html
+++ b/public/chatonline.html
@@ -13,61 +13,64 @@
         }
         .admin-container {
             display: flex;
-            height: 100vh;
+            max-width: 1200px;
+            margin: 20px auto;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            overflow: hidden;
         }
         .chat-list {
-            width: 300px;
-            background-color: #fff;
-            border-right: 1px solid #e0e0e0;
+            width: 30%;
+            border-right: 1px solid #ddd;
             overflow-y: auto;
+            max-height: 600px;
         }
         .chat-item {
             padding: 15px;
-            border-bottom: 1px solid #e0e0e0;
+            border-bottom: 1px solid #ddd;
             cursor: pointer;
         }
         .chat-item:hover {
             background-color: #f5f5f5;
         }
-        .chat-item.active {
-            background-color: #e1f5fe;
-        }
         .chat-window {
-            flex-grow: 1;
+            width: 70%;
             display: flex;
             flex-direction: column;
         }
         .chat-header {
             background-color: #4CAF50;
             color: white;
-            padding: 20px;
+            padding: 15px;
             text-align: center;
-            font-size: 24px;
+            font-size: 18px;
         }
         .chat-messages {
-            flex-grow: 1;
+            height: 400px;
             overflow-y: auto;
-            padding: 20px;
-            background-color: #fff;
+            padding: 15px;
         }
         .message {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             padding: 10px;
             border-radius: 5px;
-            max-width: 80%;
+            max-width: 70%;
         }
-        .message.sent {
-            background-color: #e1ffc7;
-            margin-left: auto;
+        .received {
+            background-color: #f1f0f0;
+            float: left;
+            clear: both;
         }
-        .message.received {
-            background-color: #f0f0f0;
+        .sent {
+            background-color: #dcf8c6;
+            float: right;
+            clear: both;
         }
         .chat-input {
             display: flex;
-            padding: 20px;
-            background-color: #fff;
-            border-top: 1px solid #e0e0e0;
+            padding: 15px;
+            border-top: 1px solid #ddd;
         }
         #message-input {
             flex-grow: 1;
@@ -92,7 +95,7 @@
             <!-- Lista de chats será preenchida dinamicamente -->
         </div>
         <div class="chat-window">
-            <div class="chat-header">
+            <div class="chat-header" id="chat-header">
                 Administração do Chat Online
             </div>
             <div class="chat-messages" id="chat-messages">
@@ -108,7 +111,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
-        // Configuração do Firebase (use as mesmas credenciais do chat.html)
+        // Configuração do Firebase
         const firebaseConfig = {
   apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
   authDomain: "cabana-8d55e.firebaseapp.com",
@@ -117,10 +120,9 @@
   storageBucket: "cabana-8d55e.appspot.com",
   messagingSenderId: "706144237954",
   appId: "1:706144237954:web:345c10370972486afc779b",
-  measurementId: "G-96Y337GYT8"
+  measurementId: "G-96Y337GYT8"            
+            // Insira sua configuração do Firebase aqui
         };
-
-        // Inicializar Firebase
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database();
 
@@ -128,6 +130,7 @@
         const chatMessages = document.getElementById('chat-messages');
         const messageInput = document.getElementById('message-input');
         const sendButton = document.getElementById('send-button');
+        const chatHeader = document.getElementById('chat-header');
 
         let currentChat = null;
 
@@ -148,9 +151,9 @@
         // Evento de clique no botão enviar
         sendButton.addEventListener('click', sendMessage);
 
-        // Evento de tecla pressionada no campo de input
-        messageInput.addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
+        // Evento de pressionar Enter no campo de mensagem
+        messageInput.addEventListener('keypress', function(event) {
+            if (event.key === 'Enter') {
                 sendMessage();
             }
         });
@@ -171,10 +174,33 @@
             updateChatList();
 
             // Notificação de desktop
-            if (message.sender !== 'admin' && Notification.permission === "granted") {
-                new Notification("Nova mensagem", { body: message.text });
+            if (message.sender !== 'admin') {
+                showNotification("Nova mensagem", message.text);
             }
         });
+
+        // Função para mostrar notificação
+        function showNotification(title, body) {
+            if (!("Notification" in window)) {
+                alert("Este navegador não suporta notificações de desktop");
+            } else if (Notification.permission === "granted") {
+                const notification = new Notification(title, { 
+                    body: body,
+                    icon: 'https://exemplo.com/icone.png' // Substitua pelo URL do seu ícone
+                });
+                notification.onclick = function(event) {
+                    event.preventDefault();
+                    window.focus();
+                    notification.close();
+                }
+            } else if (Notification.permission !== 'denied') {
+                Notification.requestPermission().then(function (permission) {
+                    if (permission === "granted") {
+                        showNotification(title, body);
+                    }
+                });
+            }
+        }
 
         // Função para atualizar a lista de chats
         function updateChatList() {
@@ -184,14 +210,16 @@
 
                 for (let key in messages) {
                     const message = messages[key];
-                    if (!chats[message.chatId]) {
-                        chats[message.chatId] = {
+                    const chatId = message.name || message.chatId;
+                    if (!chats[chatId]) {
+                        chats[chatId] = {
                             lastMessage: message.text,
-                            timestamp: message.timestamp
+                            timestamp: message.timestamp,
+                            name: message.name
                         };
-                    } else if (message.timestamp > chats[message.chatId].timestamp) {
-                        chats[message.chatId].lastMessage = message.text;
-                        chats[message.chatId].timestamp = message.timestamp;
+                    } else if (message.timestamp > chats[chatId].timestamp) {
+                        chats[chatId].lastMessage = message.text;
+                        chats[chatId].timestamp = message.timestamp;
                     }
                 }
 
@@ -199,10 +227,11 @@
                 for (let chatId in chats) {
                     const chatItem = document.createElement('div');
                     chatItem.classList.add('chat-item');
-                    chatItem.textContent = `Chat ${chatId}: ${chats[chatId].lastMessage}`;
+                    chatItem.textContent = `${chats[chatId].name || 'Chat ' + chatId}: ${chats[chatId].lastMessage}`;
                     chatItem.addEventListener('click', function() {
                         currentChat = chatId;
                         loadMessages(chatId);
+                        chatHeader.textContent = `Chat com ${chats[chatId].name || chatId}`;
                     });
                     chatList.appendChild(chatItem);
                 }
