--- a/public/chat.html
+++ b/public/chat.html
@@ -3,149 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Online - Motoboys</title>
+    <title>Chat Cabana</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             background-color: #f0f0f0;
         }
-        .chat-container {
-            max-width: 600px;
-            margin: 20px auto;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            overflow: hidden;
-        }
-        .chat-header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px;
-            text-align: center;
-            font-size: 18px;
-        }
-        .chat-messages {
+        #chat-container {
+            width: 300px;
             height: 400px;
-            overflow-y: auto;
-            padding: 15px;
-        }
-        .message {
-            margin-bottom: 10px;
-            padding: 10px;
+            border: 1px solid #ccc;
             border-radius: 5px;
-            max-width: 70%;
-        }
-        .received {
-            background-color: #f1f0f0;
-            float: left;
-            clear: both;
-        }
-        .sent {
-            background-color: #dcf8c6;
-            float: right;
-            clear: both;
-        }
-        .chat-input {
+            overflow: hidden;
             display: flex;
-            padding: 15px;
-            border-top: 1px solid #ddd;
+            flex-direction: column;
+            background-color: white;
         }
-        #message-input, #name-input {
+        #chat-messages {
             flex-grow: 1;
+            overflow-y: auto;
             padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+        }
+        #chat-form {
+            display: flex;
+            padding: 10px;
+            border-top: 1px solid #ccc;
+        }
+        #message-input {
+            flex-grow: 1;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            padding: 5px;
         }
         #send-button {
-            padding: 10px 20px;
+            margin-left: 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 4px;
-            margin-left: 10px;
+            padding: 5px 10px;
+            border-radius: 3px;
             cursor: pointer;
-        }
-        #name-input {
-            width: calc(100% - 30px);
-            margin: 15px;
-            margin-bottom: 0;
         }
     </style>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chat-header">
-            Chat Online - Motoboys
-        </div>
-        <input type="text" id="name-input" placeholder="Digite seu nome">
-        <div class="chat-messages" id="chat-messages">
-            <!-- As mensagens serão inseridas aqui dinamicamente -->
-        </div>
-        <div class="chat-input">
+    <div id="chat-container">
+        <div id="chat-messages"></div>
+        <form id="chat-form">
             <input type="text" id="message-input" placeholder="Digite sua mensagem...">
-            <button id="send-button">Enviar</button>
-        </div>
+            <button type="submit" id="send-button">Enviar</button>
+        </form>
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
         // Configuração do Firebase
         const firebaseConfig = {
-  apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
-  authDomain: "cabana-8d55e.firebaseapp.com",
-  databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
-  projectId: "cabana-8d55e",
-  storageBucket: "cabana-8d55e.appspot.com",
-  messagingSenderId: "706144237954",
-  appId: "1:706144237954:web:345c10370972486afc779b",
-  measurementId: "G-96Y337GYT8"            
-            // Insira sua configuração do Firebase aqui
+            apiKey: "AIzaSyB-pF2lRStLTN9Xw9aYQj962qdNFyUXI2E",
+            authDomain: "cabana-8d55e.firebaseapp.com",
+            databaseURL: "https://cabana-8d55e-default-rtdb.firebaseio.com",
+            projectId: "cabana-8d55e",
+            storageBucket: "cabana-8d55e.appspot.com",
+            messagingSenderId: "706144237954",
+            appId: "1:706144237954:web:345c10370972486afc779b",
+            measurementId: "G-96Y337GYT8"
         };
         firebase.initializeApp(firebaseConfig);
+
         const database = firebase.database();
-
         const chatMessages = document.getElementById('chat-messages');
+        const chatForm = document.getElementById('chat-form');
         const messageInput = document.getElementById('message-input');
-        const sendButton = document.getElementById('send-button');
-        const nameInput = document.getElementById('name-input');
 
-        // Função para enviar mensagem
-        function sendMessage() {
-            const message = messageInput.value.trim();
-            const name = nameInput.value.trim() || 'Anônimo';
-            if (message) {
-                database.ref('messages').push({
-                    text: message,
-                    timestamp: Date.now(),
-                    sender: 'motoboy',
-                    name: name
-                });
-                messageInput.value = '';
-            }
-        }
-
-        // Evento de clique no botão enviar
-        sendButton.addEventListener('click', sendMessage);
-
-        // Evento de pressionar Enter no campo de mensagem
-        messageInput.addEventListener('keypress', function(event) {
-            if (event.key === 'Enter') {
-                sendMessage();
-            }
-        });
-
-        // Ouvir por novas mensagens
-        database.ref('messages').on('child_added', function(snapshot) {
-            const message = snapshot.val();
+        // Função para adicionar mensagem ao chat
+        function addMessageToChat(message) {
             const messageElement = document.createElement('div');
-            messageElement.classList.add('message');
-            messageElement.classList.add(message.sender === 'motoboy' ? 'sent' : 'received');
-            messageElement.textContent = message.text;
+            messageElement.textContent = message;
             chatMessages.appendChild(messageElement);
             chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
+
+        // Listener para novas mensagens no Firebase
+        database.ref('messages').on('child_added', (snapshot) => {
+            const message = snapshot.val();
+            addMessageToChat(message);
+        });
+
+        // Enviar mensagem
+        chatForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const message = messageInput.value.trim();
+            if (message) {
+                database.ref('messages').push(message);
+                messageInput.value = '';
+            }
         });
     </script>
 </body>
